name:                adserver
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Ian Henry
maintainer:          ianthehenry@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable adserver
  main-is:             Main.hs
  build-depends: base >=4.7 && <4.9, base-prelude
               , configurator ==0.3.*
               , directory ==1.2.*
               , filepath ==1.3.*
               , mtl ==2.2.*
               , random ==1.1.*
               , scotty ==0.9.*
               , text ==1.2.*
               , wai ==3.0.*
               , warp ==3.0.*

  default-extensions: OverloadedStrings
                    , NoImplicitPrelude
                    , TupleSections
                    , NamedFieldPuns
                    , RecordWildCards

  default-language: Haskell2010
